# adaptive-traffic-signal-green-corridor

./: .gitignore  AGENTS.md  BUILD_COMPLETE.md  Model Report.md  PROJECT_NOTES.md  README.md  config.py  main.py  pyproject.toml  uv.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/skills/agentic-eval/: SKILL.md
control/: __init__.py  density_predictor.py  emergency_classifier.py  model_controller.py  rl_agent.py  schema.py  signal_controller.py  siren_detector.py  state_encoder.py  test_controller.py  test_emergency_classifier_policy.py  test_runtime_contracts.py  traffic_detector.py
data/: README.md
detection/: __init__.py  traffic_predictor.py  vehicalCount.py  vehicle_detector.py
docs/: Emergency_model_integration.md  README.md  demo_logic.md  density-predictor-explanation.md  project-blueprin.md
docs/Graph/: 01_centralized_system_configuration__config_py__.md  02_traffic_simulation_environment__trafficenv__.md  03_model_orchestrator__modelcontroller__.md  04_dqn_signal_optimizer__signalcontroller__.md  05_emergency_green_corridor_logic_.md  06_traffic_density_predictor_.md  07_fairness_and_anti_starvation_policy_.md  08_predictive_stability_guard_.md  index.md
gui/: __init__.py  app.py  routes.py
gui/static/css/: compare.css  style.css
gui/static/js/: app.js  compare.js  synthetic.js
gui/templates/: compare.html  demo_orchestrator.html  index.html  simulation.html  synthetic_demo.html  test.html  test_emergency.html  test_traffic_prediction.html  upload_demo.html
hardware/: README.md
models/: density_predictor_E.ubj  density_predictor_N.ubj  density_predictor_S.ubj  density_predictor_W.ubj  dqn_signal_optimizer.pt
plan/: feature-emergency-classifier-1.md  refactor-runtime-bugfixes-1.md
simulation/: traffic_env.py
simulation_gui/: __init__.py  app.py  engine.py
simulation_gui/static/: sim.css  sim.js
simulation_gui/templates/: simulation.html
test/: test.py
training/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  QUICKSTART.md  README.md  Siren.ipynb  TRAINING_GUIDE.md  emergency_vehicle_classifier.ipynb  emergnecy_detection.ipynb  evaluate.py  siren_detection.ipynb  trafficDetection.ipynb  train_rl.py
training/DQN/: dqn_agent.py  environment.py  replay_buffer.py  train.py
