[project]
name = "adaptive-traffic-signal-green-corridor"
version = "0.1.0"
description = "Adaptive traffic signal control with green corridor and emergency preemption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.10",
    "pillow>=9.0",
    "ultralytics>=8.3",
    "pyserial>=3.5",
    "flask>=3.0",
    "numpy>=2.0",
    "pyyaml>=6.0",
    # Density prediction models
    "scikit-learn>=1.5", # Required for trained density predictor models
    "xgboost>=3.2.0",
    # RL signal controller
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
    "torch>=2.2",
    "matplotlib>=3.8",
    "flask-socketio>=5.6.1",
    "eventlet>=0.40.4",
    "tensorflow-cpu>=2.21.0",
    "librosa>=0.11.0",
]

[project.optional-dependencies]
prediction = [
    # Optional XGBoost predictor for future enhancements
    "xgboost>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["control", "detection", "gui"]


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "librosa>=0.11.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
